--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,9 @@
 {
-  "hosting": {
-    "site": "api-react-poster",
-    "public": "/",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      {
-        "source": "**",
-        "function": "app"
-      }
-    ]
-  }
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": ["firebase-debug.log", "firebase-debug.*.log"]
+    }
+  ]
 }
