--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "react-crash-course-backend",
   "private": true,
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "functions/index.js",
   "scripts": {
-    "start": "node index.js"
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.6.0"
   }
 }
