--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,8 @@
 {
   "functions": [
     {
-      "source": "functions",
+      "source": ".",
+      "runtime": "nodejs18",
       "codebase": "default",
       "ignore": ["firebase-debug.log", "firebase-debug.*.log"]
     }
