--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,10 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm ci && npm run deploy
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Deploy to Firebase Functions
+        uses: docker://w9jds/firebase-action:master
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_REACT_POSTER_AND_ROUTER_6 }}'
-          channelId: live
-          projectId: react-poster-and-router-6
+          args: deploy --only functions
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_REACT_POSTER_AND_ROUTER_6 }}
