--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           args: deploy --only functions
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_REACT_POSTER_AND_ROUTER_6 }}
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
